# OptiXPrimeTemplate

./: CMakeLists.txt  README.md
cmake/: FindOptiX.cmake
include/: structs.hpp
include/putil/: Preprocessor.h
src/: main.cpp  rays.cu
